--- a/SVG Lab/sdua01.html
+++ b/SVG Lab/sdua01.html
@@ -188,6 +188,7 @@
                 .attr("y2", by2)
                 .attr("opacity", opacity);
                    
+            /* flip align boolean */
             isAligned = !isAligned;
         });
 
