--- a/d3_demo/colored_bar_chart.html
+++ b/d3_demo/colored_bar_chart.html
@@ -39,7 +39,7 @@
          width = 500 - margin.left - margin.right,
         height = 500 - margin.top - margin.bottom;
         
-    var color = d3.scaleOrdinal().range(d3.schemeCategory10);
+    var color = d3.scaleOrdinal().range(d3.schemeCategory20b);
         
     var barWidth = width / data.length;
 
