--- a/brushing-and-linking-lab/linking-lab/openMe.html
+++ b/brushing-and-linking-lab/linking-lab/openMe.html
@@ -8,17 +8,143 @@
 </head>
 <body>
 	<div id="hierarchy1">
-
 	</div>
 	<div id="hierarchy2">
-
 	</div>
 	
 	<script>
 		/*
-		 * Name: YOUR NAME
+		 * Name: Sejal Dua
+		 * Treemap
+		 * Sunburst
 		 */
+
+		/* TREEMAP */
+
+		var width = $('#hierarchy1').width();
+		var height = $('#hierarchy1').height();
+		var margin = 20;
+
+		var svg = d3.select("#hierarchy1").append("svg")
+			.attr("width", width - margin)
+			.attr("height", height - margin)
+			.append("g")
+			.attr("transform", "translate(" + (margin / 2) + "," + (margin / 2) + ")");
+
+		var fader = function(color) { return d3.interpolateRgb(color, "#fff")(0.2); },
+			color = d3.scaleOrdinal(d3.schemeCategory20.map(fader)),
+			format = d3.format(",d");
+
+		var treemap = d3.treemap()
+			.tile(d3.treemapResquarify)
+			.size([width, height])
+			.round(true)
+			.paddingInner(1);
+
+		var root = d3.hierarchy(flare)
+			.eachBefore(function(d) { d.data.id = (d.parent ? d.parent.data.id + "." : "") + d.data.name; })
+			.sum(sumBySize)
+			.sort(function(a, b) { return b.height - a.height || b.value - a.value; });
+
+		treemap(root);
+
+		var cell = svg.selectAll("g")
+			.data(root.leaves())
+			.enter().append("g")
+			.attr("transform", function(d) { return "translate(" + d.x0 + "," + d.y0 + ")"; });
+
+		cell.append("rect")
+			.attr("id", function(d) { return d.data.id; })
+			.attr("width", function(d) { return d.x1 - d.x0; })
+			.attr("height", function(d) { return d.y1 - d.y0; })
+			.attr("fill", function(d) { return color(d.parent.data.id); });
+
+		cell.append("clipPath")
+			.attr("id", function(d) { return "clip-" + d.data.id; })
+			.append("use")
+			.attr("xlink:href", function(d) { return "#" + d.data.id; });
+
+		cell.append("text")
+			.attr("clip-path", function(d) { return "url(#clip-" + d.data.id + ")"; })
+			.selectAll("tspan")
+			.data(function(d) { return d.data.name.split(/(?=[A-Z][^A-Z])/g); })
+			.enter().append("tspan")
+			.attr("x", 4)
+			.attr("y", function(d, i) { return 13 + i * 10; })
+			.text(function(d) { return d; });
+
+		cell.append("title")
+			.text(function(d) { return d.data.id + "\n" + format(d.value); });
+
+		d3.selectAll("input")
+			.data([sumBySize, sumByCount], function(d) { return d ? d.name : this.value; })
+
+		function sumByCount(d) {
+			return d.children ? 0 : 1;
+		}
+
+		function sumBySize(d) {
+			return d.size;
+		}
+
+		/* SUNBURST */
+		var width = $('#hierarchy2').width(),
+			height = $('#hierarchy2').height(),
+			radius = (Math.min(width, height) / 2) - 10;
+
+		var formatNumber = d3.format(",d");
+
+		var x = d3.scaleLinear()
+			.range([0, 2 * Math.PI]);
+
+		var y = d3.scaleSqrt()
+			.range([0, radius]);
+
+		var color = d3.scaleOrdinal(d3.schemeCategory10);
+
+		var partition = d3.partition();
+
+		var arc = d3.arc()
+			.startAngle(function(d) { return Math.max(0, Math.min(2 * Math.PI, x(d.x0))); })
+			.endAngle(function(d) { return Math.max(0, Math.min(2 * Math.PI, x(d.x1))); })
+			.innerRadius(function(d) { return Math.max(0, y(d.y0)); })
+			.outerRadius(function(d) { return Math.max(0, y(d.y1)); });
+
+
+		var svg = d3.select("#hierarchy2").append("svg")
+			.attr("width", width - margin)
+			.attr("height", height - margin)
+			.append("g")
+			.attr("transform", "translate(" + ((width / 2) + (margin / 2)) + "," + ((height / 2) + (margin / 2)) + ")");
 		
+		var root = d3.hierarchy(flare);
+		root.sum(function(d) { return d.size; });
+
+		svg.selectAll("path")
+			.data(partition(root).descendants())
+			.enter().append("path")
+			.attr("d", arc)
+			.attr("display", function(d) { return d.depth ? null : "none"; })
+			.style("fill", function(d) { return color((d.children ? d : d.parent).data.name); });
+
+		svg.selectAll("text")
+			.data(partition(root).descendants().filter(function(d) { return x(d.x1)-x(d.x0) > .05; }))
+			.enter().append("text")
+			.attr("transform", function(d) { 
+				var rotation
+				if(d.parent){
+					offset =  d.x1 + .005 > 1 ? d.x1 + .005 - 1 : d.x1 + .005;
+					rotation = (Math.max(0, Math.min(2 * Math.PI, x(offset)))  - Math.PI / 2) / Math.PI * 180;
+				}else rotation = 0;
+				return "rotate(" + rotation + ")"; })
+			.attr("x", function(d) { return Math.max(0, y(d.y0)); })
+			.attr("dx", "6") // margin
+			.attr("dy", ".35em") // vertical-align
+			.text(function(d) { return d.data.name; });
+
+		d3.select(self.frameElement).style("height", height + "px");
+
+
 	</script>
 </body>
 </html>
