--- a/brushing-and-linking-lab/linking-lab/openMe.html
+++ b/brushing-and-linking-lab/linking-lab/openMe.html
@@ -11,12 +11,35 @@
 	</div>
 	<div id="hierarchy2">
 	</div>
-	
+	<style>
+		.node circle {
+			fill: #999;
+		}
+
+		.node text {
+			font: 10px sans-serif;
+		}
+
+		.node--internal circle {
+			fill: #555;
+		}
+
+		.node--internal text {
+			text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
+		}
+
+		.link {
+			fill: none;
+			stroke: #555;
+			stroke-opacity: 0.4;
+			stroke-width: 1.5px;
+		}
+	</style>
 	<script>
 		/*
 		 * Name: Sejal Dua
 		 * Treemap
-		 * Sunburst
+		 * Nodelink
 		 */
 
 		/* TREEMAP */
@@ -87,63 +110,109 @@
 			return d.size;
 		}
 
-		/* SUNBURST */
-		var width = $('#hierarchy2').width(),
-			height = $('#hierarchy2').height(),
-			radius = (Math.min(width, height) / 2) - 10;
+		// /* SUNBURST */
+		// var width = $('#hierarchy2').width(),
+		// 	height = $('#hierarchy2').height(),
+		// 	radius = (Math.min(width, height) / 2) - 10;
 
-		var formatNumber = d3.format(",d");
+		// var formatNumber = d3.format(",d");
 
-		var x = d3.scaleLinear()
-			.range([0, 2 * Math.PI]);
+		// var x = d3.scaleLinear()
+		// 	.range([0, 2 * Math.PI]);
 
-		var y = d3.scaleSqrt()
-			.range([0, radius]);
+		// var y = d3.scaleSqrt()
+		// 	.range([0, radius]);
 
-		var color = d3.scaleOrdinal(d3.schemeCategory10);
+		// var color = d3.scaleOrdinal(d3.schemeCategory10);
 
-		var partition = d3.partition();
+		// var partition = d3.partition();
 
-		var arc = d3.arc()
-			.startAngle(function(d) { return Math.max(0, Math.min(2 * Math.PI, x(d.x0))); })
-			.endAngle(function(d) { return Math.max(0, Math.min(2 * Math.PI, x(d.x1))); })
-			.innerRadius(function(d) { return Math.max(0, y(d.y0)); })
-			.outerRadius(function(d) { return Math.max(0, y(d.y1)); });
+		// var arc = d3.arc()
+		// 	.startAngle(function(d) { return Math.max(0, Math.min(2 * Math.PI, x(d.x0))); })
+		// 	.endAngle(function(d) { return Math.max(0, Math.min(2 * Math.PI, x(d.x1))); })
+		// 	.innerRadius(function(d) { return Math.max(0, y(d.y0)); })
+		// 	.outerRadius(function(d) { return Math.max(0, y(d.y1)); });
 
+
+		// var svg = d3.select("#hierarchy2").append("svg")
+		// 	.attr("width", width - margin)
+		// 	.attr("height", height - margin)
+		// 	.append("g")
+		// 	.attr("transform", "translate(" + ((width / 2) + (margin / 2)) + "," + ((height / 2) + (margin / 2)) + ")");
+		
+		// var root = d3.hierarchy(flare);
+		// root.sum(function(d) { return d.size; });
+
+		// svg.selectAll("path")
+		// 	.data(partition(root).descendants())
+		// 	.enter().append("path")
+		// 	.attr("d", arc)
+		// 	.attr("display", function(d) { return d.depth ? null : "none"; })
+		// 	.style("fill", function(d) { return color((d.children ? d : d.parent).data.name); });
+
+		// svg.selectAll("text")
+		// 	.data(partition(root).descendants().filter(function(d) { return x(d.x1)-x(d.x0) > .05; }))
+		// 	.enter().append("text")
+		// 	.attr("transform", function(d) { 
+		// 		var rotation
+		// 		if(d.parent){
+		// 			offset =  d.x1 + .005 > 1 ? d.x1 + .005 - 1 : d.x1 + .005;
+		// 			rotation = (Math.max(0, Math.min(2 * Math.PI, x(offset)))  - Math.PI / 2) / Math.PI * 180;
+		// 		}else rotation = 0;
+		// 		return "rotate(" + rotation + ")"; })
+		// 	.attr("x", function(d) { return Math.max(0, y(d.y0)); })
+		// 	.attr("dx", "6") // margin
+		// 	.attr("dy", ".35em") // vertical-align
+		// 	.text(function(d) { return d.data.name; });
+
+		// d3.select(self.frameElement).style("height", height + "px");
+
+
+		/* NODELINK */
+		var width = $('#hierarchy2').width();
+		var height = $('#hierarchy2').height();
 
 		var svg = d3.select("#hierarchy2").append("svg")
 			.attr("width", width - margin)
 			.attr("height", height - margin)
 			.append("g")
-			.attr("transform", "translate(" + ((width / 2) + (margin / 2)) + "," + ((height / 2) + (margin / 2)) + ")");
-		
+			.attr("transform", "translate(" + (width / 2 + 20) + "," + (height / 2 + 40) + ")");
+
+		var tree = d3.tree()
+			.size([2 * Math.PI, 250])
+			.separation(function(a, b) { return (a.parent == b.parent ? 1 : 2) / a.depth; });
+
 		var root = d3.hierarchy(flare);
-		root.sum(function(d) { return d.size; });
 
-		svg.selectAll("path")
-			.data(partition(root).descendants())
+		tree(root);
+
+		var link = svg.selectAll(".link")
+			.data(root.links())
 			.enter().append("path")
-			.attr("d", arc)
-			.attr("display", function(d) { return d.depth ? null : "none"; })
-			.style("fill", function(d) { return color((d.children ? d : d.parent).data.name); });
+			.attr("class", "link")
+			.attr("d", d3.linkRadial()
+				.angle(function(d) { return d.x; })
+				.radius(function(d) { return d.y; }));
 
-		svg.selectAll("text")
-			.data(partition(root).descendants().filter(function(d) { return x(d.x1)-x(d.x0) > .05; }))
-			.enter().append("text")
-			.attr("transform", function(d) { 
-				var rotation
-				if(d.parent){
-					offset =  d.x1 + .005 > 1 ? d.x1 + .005 - 1 : d.x1 + .005;
-					rotation = (Math.max(0, Math.min(2 * Math.PI, x(offset)))  - Math.PI / 2) / Math.PI * 180;
-				}else rotation = 0;
-				return "rotate(" + rotation + ")"; })
-			.attr("x", function(d) { return Math.max(0, y(d.y0)); })
-			.attr("dx", "6") // margin
-			.attr("dy", ".35em") // vertical-align
-			.text(function(d) { return d.data.name; });
+		var node = svg.selectAll(".node")
+			.data(root.descendants())
+			.enter().append("g")
+			.attr("class", function(d) { return "node" + (d.children ? " node--internal" : " node--leaf"); })
+			.attr("transform", function(d) { return "translate(" + radialPoint(d.x, d.y) + ")"; });
 
-		d3.select(self.frameElement).style("height", height + "px");
+		node.append("circle")
+			.attr("r", 2.5);
 
+		node.append("text")
+			.attr("dy", "0.31em")
+			.attr("x", function(d) { return d.x < Math.PI === !d.children ? 6 : -6; })
+			.attr("text-anchor", function(d) { return d.x < Math.PI === !d.children ? "start" : "end"; })
+			.attr("transform", function(d) { return "rotate(" + (d.x < Math.PI ? d.x - Math.PI / 2 : d.x + Math.PI / 2) * 180 / Math.PI + ")"; })
+			.text(function(d) { return d.data.name });
+
+		function radialPoint(x, y) {
+		return [(y = +y) * Math.cos(x -= Math.PI / 2), y * Math.sin(x)];
+		}
 
 	</script>
 </body>
