--- a/MapLab/openMe.html
+++ b/MapLab/openMe.html
@@ -15,7 +15,6 @@ h4 {
   font-size: 12px;
 }
 
-
 .counties {
   fill: none;
 }
@@ -99,11 +98,16 @@ var title = d3.select("h1")
 var map = d3.select('.map-div')
   .append('div')
   .attr('class', 'map')
+  .attr('id', 'm')
+
+document.getElementById("m").style.cursor = "crosshair";
 
 function makeMap(map, us)
 {
+  // clear map
   map.selectAll("*").remove();
 
+  // set map dimensions based on current window size
   var width = map.node().getBoundingClientRect().width;
   var height = width * 0.625;
 
